fixed modal styles on mobile

--- a/app/styles/components/map/c-share.scss
+++ b/app/styles/components/map/c-share.scss
@@ -1,6 +1,8 @@
 @import '../../settings';
 
 .c-share {
+  overflow-x: hidden;
+  overflow-y: auto;
   text-align: center;
 
   > .title {
@@ -19,22 +21,25 @@
   }
 
   > form {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
     margin: 10px 0 0;
     padding: 0;
-    position: relative;
   }
 
-  .url-input {
+  > form > .url-input {
     background-color: transparent;
     border: 1px solid $color-14;
     color: rgba($color-4, .3);
     font-size: $font-size-small;
     height: 40px;
-    padding: 0 90px 0 20px;
+    max-width: 225px;
+    padding: 0 0 0 5px;
+    text-overflow: ellipsis;
+    width: calc(100% - 70px);
   }
 
-  .copy-button {
+  > form > .copy-button {
     background-color: $color-3;
     border: 0;
     color: $color-4;
@@ -42,10 +47,7 @@
     font-size: $font-size-small;
     font-weight: $font-weight-bold;
     height: 40px;
-    position: absolute;
-    right: 0;
     text-transform: uppercase;
-    top: 0;
     width: 70px;
   }
 
@@ -59,13 +61,11 @@
 
       &::before,
       &::after {
-        // border: 0;
         border-top: 1px solid $color-14;
         content: '';
         display: inline-block;
         position: absolute;
         top: 50%;
-        // transform: translate(0, -50%);
         width: calc(50% - 34px);
       }
 
@@ -81,39 +81,40 @@
 
   .social-links {
     display: flex;
-    justify-content: space-between;
-    width: 100%;
+    flex-direction: column;
+
+
+    @media #{$mq-tablet} {
+      flex-direction: row;
+      justify-content: space-between;
+    }
 
     > .social-button {
       border: 0;
       cursor: pointer;
-      flex-basis: calc(33.33% - 18px);
       padding: 24px 0;
+
+      &:not(:first-child) {
+        margin: 15px 0 0;
+      }
 
       &.-facebook {
         background-color: $color-28;
-
-        img {
-          height: 22px;
-          width: 10px;
-        }
       }
 
       &.-googleplus {
         background-color: $color-29;
-
-        img {
-          height: 17px;
-          width: 21px;
-        }
       }
 
       &.-twitter {
         background-color: $color-30;
+      }
 
-        img {
-          height: 15px;
-          width: 18px;
+      @media #{$mq-tablet} {
+        flex-basis: calc(33.33% - 18px);
+
+        &:not(:first-child) {
+          margin: 0;
         }
       }
 
@@ -130,6 +131,27 @@
           font-weight: $font-weight-bold;
           margin: 0 0 0 5px;
           text-transform: uppercase;
+        }
+
+        > .facebook-icon,
+        > .google-plus-icon,
+        > .twitter-icon {
+          fill: $color-4;
+        }
+
+        > .facebook-icon {
+          height: 22px;
+          width: 10px;
+        }
+
+        > .google-plus-icon {
+          height: 17px;
+          width: 21px;
+        }
+
+        > .twitter-icon {
+          height: 15px;
+          width: 18px;
         }
       }
     }
